--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.49MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: 38.107.226.238, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-174.6KB/s(Youtube:不良林), server: 38.107.226.238, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-236.5KB/s(Youtube:不良林), server: c61s4.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.43MB/s(Youtube:不良林), server: c61s3.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇯🇵 日本-1.42MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.45MB/s(Youtube:不良林), server: 1.ezydfdd.com, port: 443, type: vmess, uuid: 4ee48ad8-178c-40a2-9c52-a14e90a06e49, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /nmsl, ws-headers: {Host: 1.ezydfdd.com}}
-  - {name: 🇩🇪 德国-369.5KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
-  - {name: 未知国家-492.2KB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
+  - {name: 🇨🇳 中国-321.1KB/s(Youtube:不良林), server: wg.nfeng6.pp.ua, port: 52217, type: vmess, uuid: 4e66672a-184c-30e4-900a-a19004c38e85, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-174.6KB/s(Youtube:不良林), server: 38.107.226.238, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇩🇪 德国-168.0KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-492.2KB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
+  - {name: 🇨🇳 中国-703.6KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇦🇺 澳大利亚-353.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇨🇳 中国-5.09MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-174.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-236.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-369.5KB/s(Youtube:不良林)
-      - 未知国家-492.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-174.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-168.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-492.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-703.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-353.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-174.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-236.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-369.5KB/s(Youtube:不良林)
-      - 未知国家-492.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-174.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-168.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-492.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-703.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-353.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-174.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-236.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-369.5KB/s(Youtube:不良林)
-      - 未知国家-492.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-174.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-168.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-492.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-703.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-353.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-174.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-236.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-369.5KB/s(Youtube:不良林)
-      - 未知国家-492.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-174.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-168.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-492.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-703.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-353.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-174.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-236.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-369.5KB/s(Youtube:不良林)
-      - 未知国家-492.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-174.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-168.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-492.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-703.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-353.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-174.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-236.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-369.5KB/s(Youtube:不良林)
-      - 未知国家-492.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-174.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-168.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-492.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-703.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-353.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-174.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-236.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-369.5KB/s(Youtube:不良林)
-      - 未知国家-492.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-174.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-168.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-492.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-703.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-353.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
