--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: c61s801.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-474.6KB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
-  - {name: 🇬🇧 英国-2.47MB/s(Youtube:不良林), server: 51.89.115.71, port: 443, type: vmess, uuid: 10d590b4-f5da-4494-b6ff-51ef38149448, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.115.71}}
-  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: 38.107.226.238, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇫🇷 法国-2.25MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-887.7KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.99MB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: 37.120.147.230, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.93MB/s(Youtube:不良林), server: c61s801.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: c61s3.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-174.1KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: 38.107.226.238, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-10.90MB/s(Youtube:不良林), server: c61s4.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.79MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-340.7KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇨🇳 中国-552.3KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1150, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇬🇧 英国-1.21MB/s(Youtube:不良林), server: 51.89.81.132, port: 443, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.81.132}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-474.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇬🇧 英国-887.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-174.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-340.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-552.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-474.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇬🇧 英国-887.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-174.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-340.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-552.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-474.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇬🇧 英国-887.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-174.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-340.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-552.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-474.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇬🇧 英国-887.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-174.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-340.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-552.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-474.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇬🇧 英国-887.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-174.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-340.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-552.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-474.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇬🇧 英国-887.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-174.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-340.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-552.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-474.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇬🇧 英国-887.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-174.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-340.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-552.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
